# rnbo.move.control

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md  conanfile.py
.cargo/: config  config.toml
config/: control-startup.json  move-control-init.d  rnbomovecontrol-init.d
src/: cmd.rs  config.rs  controller.rs  display.rs  font.rs  main.rs  midi.rs  oscquery.rs  param.rs  patcher.rs  userview.rs  util.rs  view.rs
src/font/: cga8x16.rs  cga_8x16.data  cga_light_8x16.data  cgalight8x16.rs  spleen8x16.rs  spleen_8x16.data
src/widget/: menu.rs
