[package]
name = "move-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
jack = { version = "0.11.4", features = ["metadata"] }
