[package]
name = "rnbomovecontrol"
version = "0.1.0-beta.29"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
futures-util = "0.3.30"
jack = { version = "0.11.4", features = ["metadata"] }
profont = "0.7.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = ["json"] } #disable default, we don't need TLS
reqwest-websocket = "0.2.0"
rosc = "0.10.1"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
smlang = { git = "https://github.com/x37v/smlang-rs", branch = "main" }
serde = { version = "1.0.215", features = ["std", "derive"] }
embedded-layout = "0.4.1"
itertools = "0.13.0"
palette = "0.7.6"
clap = { version = "4.5.21", features = ["derive"] }
home = "0.5.9"
libc = "0.2.168"
rlimit = "0.10.2"
syslog = "7.0.0"
pad = "0.1"
#mousefood = "0.2.1"
mousefood = { git = "https://github.com/x37v/mousefood", branch = "main" }
ratatui = { version = "0.30.0-alpha.5", default-features = false }
tui-widget-list = { git = "https://github.com/x37v/tui-widget-list/", branch = "ratatui-core" }
chrono = "0.4.41"
once_cell = "1.21.3"
unicase = "2.8.1"
smol = "2.0.2"
psx-shm = "0.2.0"
rustix = "1.1.2"
num-traits = "0.2.19"
rnbo-embedded-graphics = { git = "https://github.com/Cycling74/rnbo-embedded-graphics" }
atomic_float = "1.1.0"
tinybmp = "0.7.0"
